<resources>
    <string name="app_name">Kitchen</string>

    <string name="kitchen">ERES Kitchen</string>
    <string name="new_orders">New orders</string>
    <string name="accepted_orders">Accepted orders</string>
    <string name="chief_cook">ERES CHIEF COOK</string>
    <string name="aorm">AORM</string>
    <string name="stop_list">Stop List</string>
    <string name="served_meals">Served Meals</string>
    <string name="banquet">Banquet</string>
    <string name="setting">Settings</string>
    <string name="exit">Exit</string>

    <string name="editor">ERES EDITOR</string>
    <string name="add_new_meal">Add a new meal</string>
    <string name="name">Name</string>
    <string name="list_of_new_meals">List of new meals</string>
    <string name="description">Describtion</string>
    <string name="ingredient">Ingredient</string>
    <string name="category">Category</string>
    <string name="clarification">Clarification</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="cansel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_all">Confirm All</string>
    <string name="ingredientt">INGREDIENT</string>
    <string name="delete">DELETE</string>
    <string name="done">Done</string>
    <string name="edit_meals">ERES EDIT MEALS</string>
    <string name="edited_meals_list">Edited Meals List</string>
    <string name="edit">EDIT</string>
    <string name="toast_confirm">To Confirm press again !!!</string>


    <string name="settings">ERES Settings</string>
    <string name="preview">Preview</string>

    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="enter">ENTER</string>
    <string name="orderNumber">Table No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="massa">Weight</string>
    <string name="refactor">Refactor Meals</string>
    <string name="editMeals">Edit Meals</string>
    <string name="dona">pcs</string>

    <string name="clear_trash">Clear trash</string>
    <string name="deleted_products">Deleted products</string>
    <string name="recovering_products">Recovered products</string>
    <string name="clear_trash_button">Clear</string>
    <string name="restore_trash_button">Restore</string>
    <string name="trash_title">Trash</string>
    <string name="add">Add</string>
    <string name="price">Price</string>
    <string name="summ">Soums</string>


</resources>
