<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".fragments.AddIngredientFragment">

    <TextView
        android:id="@+id/TVIngredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/ingredientt"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#d1baba"
        app:layout_constraintTop_toBottomOf="@+id/TVIngredient" />

    <EditText
        android:id="@+id/eTName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_edit_text_2"
        android:hint="@string/name"
        android:padding="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <EditText
        android:id="@+id/eTWeight"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_edit_text_2"
        android:hint="@string/massa"
        android:inputType="number"
        android:padding="8dp"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTName" />
<RelativeLayout
    android:id="@+id/spinnerCover"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="@drawable/back_edit_text_2"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginEnd="64dp"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@id/eTName">

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner17"
        style="@style/Widget.AppCompat.DropDownItem.Spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        >

    </android.support.v7.widget.AppCompatSpinner>
</RelativeLayout>

    <Button
    android:id="@+id/btnAdd"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@drawable/back_btn_ok"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:layout_marginTop="16dp"
    android:textSize="20dp"
    android:text="ADD"
        android:textColor="#ffffff"
    app:layout_constraintTop_toBottomOf="@id/spinnerCover" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/RVselectedItems"
        android:layout_width="0dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <Button
        android:id="@+id/button8"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:text="@string/delete"
        android:background="@drawable/back_btn_cancel"
        android:textSize="20dp"
        android:textColor="@color/eres_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:background="@drawable/back_btn_ok"
        android:textColor="#ffffff"
        android:text="@string/done"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>