<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBarProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/eres_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/chief_cook"
            android:textSize="28sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:padding="4dp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/toolbar_shadow"
        app:layout_constraintTop_toBottomOf="@id/toolBarProfile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/itemMiddle"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:background="@drawable/back_profile_items"
        android:layout_margin="32dp"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="104dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/stop_dish" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="180dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textSize="40sp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/stop_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/itemRIght"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:background="@drawable/back_profile_items"
        android:layout_margin="32dp"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/itemMiddle">
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="104dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/exit" />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="180dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:text="@string/exit"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/itemLeft"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:background="@drawable/back_profile_items"
        android:layout_margin="32dp"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintRight_toLeftOf="@id/itemMiddle"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="104dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/chicken_edit" />
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="180dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textSize="40sp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/refactor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>